# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [2.1.1] - 2023-03-30
### Changed
- [UPDATE] [SYSTEM] Default base upgrade merge strategy is now 'mine-full' (keep local versions)
### Fixed
- [UPDATE] [SYSTEM] Ensure options used during hbsd-update are all kept for jails' upgrades


## [2.1.0] - 2023-03-16
### Added
- [UPGRADE] [HBSD13] Add a script to register new Vulture's HBSD13 own repositories (and disable previous ones)
- [UPGRADE] [HBSD13] Add an upgrade script to go from HBSD12 to HBSD13 (and switch to Vulture's own repositories)
### Changed
- [SYSTEM] [MOTD] Updated MOTD to notify about new script to upgrade to HBSD13
### Fixed
- [UPDATE] [SYSTEM] Ensure system update is downloaded before trying to upgrade the system or a jail


## [2.0.11] - 2023-03-01
### Fixed
- [HAPROXY] [SYSTEM_LOGGING] Internal Haproxy logging through Rsyslog didn't work


## [2.0.10] - 2023-03-01
### Changed
- [LOGROTATE] decrease retention time of /var/log/pf/pf.log files to 7
- [MKJAIL_RSYSLOG] Mount /var/log/pf as RW in Rsyslog jail
- [MOTD] Adapt Vulture MOTD to HBSD13
### Added
- [LOGROTATE] Add log rotation for new /zroot/rsyslog/var/log/internal/pf.conf parsed pf logs
### Removed
- [SYSTEM] Don't package a custom netif script anymore


## [2.0.9] - 2023-02-16
### Changed
- [UPDATE_SYSTEM] Reload Haproxy after an upgrade instead of stopping/starting it
- [SYSTEM] [RC] Set system network config in /etc/rc.conf instead of /etc/rc.conf.d/network
### Added
- [RSYSLOG] [CONFIG] new static ruleset for haproxy global logs parsing and writing
### Fixed
- [LOGROTATE] [CONFIG] Wrong extension '.gz.gz' on logrotated haproxy log files


## [2.0.8] - 2023-01-18
### Fixed
- [UPDATE_SYSTEM] Don't use the jail's hbsd-update.conf file for jail system upgrades
### Changed