@@ -5,6 +5,11 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
 
+## [Unreleased]
+### Fixed
+- [UPDATE_SYSTEM] Ensure secadm version stays up-to-date with the kernel version
+
+
 ## [2.1.1] - 2023-03-30
 ### Changed
 - [UPDATE] [SYSTEM] Default base upgrade merge strategy is now 'mine-full' (keep local versions)
